tests/posts/invalid/invalid-date.markdown
Title: Missing date.

Tags: News, Slugs, PHP

Slug: missing-date

Date: 2014-99-99

Body:

# Heading

Text.
